# MonthEnd

./: README.md
backend/: package-lock.json  package.json  server.js
backend/config/: auth.js
backend/controller/: ai.js  allowance.js  auth.js  calendar.js  expenses.js  goals.js  home.js  planning.js  user.js
backend/errors/: error.js
backend/middleware/: auth.js
backend/models/: allowance-model.js  allowanceModel.js  calander-model.js  calendarModel.js  expenses-model.js  expensesModel.js  goal-model.js  goalModel.js  planning-model.js  planningModel.js  user-model.js  userModel.js
backend/routes/: aiRoute.js  allowanceRoute.js  authRoute.js  calendarRoute.js  expensesRoute.js  goalRoute.js  homeRoute.js  planningRoute.js  userRoute.js
backend/services/: insightsGeneral.js  reflection.js
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.jsx  App.tsx
frontend/src/app/components/: AuthPage.jsx  ChatPopup.jsx  HomePage.jsx  Screen10Chatbot.jsx  Screen1Welcome.jsx  Screen2Allowance.jsx  Screen3ExpectedSpending.jsx  Screen4AddExpense.jsx  Screen5ExpectedVsActual.jsx  Screen6Goal.jsx  Screen7Reflection.jsx  Screen8ShareWithParents.jsx  Screen9CalendarSync.jsx
frontend/src/styles/: theme.css
sample_AIML/: .gitignore  README.md  pyproject.toml  requirements.txt
sample_AIML/ai_engine/: __init__.py  core.py  hf_advisor.py  model.py  run.py  schemas.py
sample_AIML/data/: example_user_payload.json
shared/schemas/: schemas.json
