[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine"
version = "0.1.0"
description = "Backend AI engine for behavioral spending analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pandas",
    "numpy",
    "pymongo",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_engine*"]
